# EvolveAI

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  installer.nsi  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
app/: layout.tsx
components/: chat-interface.tsx  dashboard.tsx  edit-rule-dialog.tsx  header.tsx  rule-dialog.tsx  settings.tsx  sidebar.tsx
crates/evolve-core/: Cargo.toml
crates/evolve-core/src/: lib.rs  simple.rs
crates/evolve-core/src/chain/: block.rs  hash.rs  ledger.rs  mod.rs  tests.rs
crates/evolve-core/src/lifecycle/: mod.rs  orchestrator.rs  tests.rs  types.rs
crates/evolve-core/src/memory/: decay.rs  decoder.rs  encoder.rs  mod.rs  tests.rs  types.rs
crates/evolve-core/src/processor/: facade.rs  ingest.rs  mod.rs  persist.rs  profile.rs  query.rs  slo.rs  tests.rs  trust.rs  types.rs
crates/evolve-core/src/representation/: engine.rs  factory.rs  ggcore.rs  mock.rs  mod.rs  similarity.rs  tests.rs  types.rs
crates/evolve-core/src/shadow/: genome.rs  interceptor.rs  mod.rs  tests.rs  types.rs
crates/evolve-core/src/simple/: mod.rs  tests.rs
crates/evolve-core/src/tiers/: l1_cache.rs  l2_graph.rs  l3_vault.rs  mod.rs  router.rs  tests.rs
crates/evolve-core/tests/: thermodynamic_lifecycle.rs  zero_trust.rs
docs/: ARCHITECTURE_PLAN.md  AUTOPOIETIC_MEMORY_THEORY.md  BACKLOG.md  CONCEPT.md  EvolveAI_Documentation.md  META_LEDGER.md  NEURAL_NET_PROCESSOR_DESIGN.md  PRISM_UOR_MDK_SUMMARY.md  SHADOW_GENOME.md  SYSTEM_STATE.md  plan-v2-foundations.md  plan-v2.1-transformer-engine.md  plan-v3-rust-rewrite.md  plan-v3.1-memory-pipeline.md  plan-v3.2-persistence.md  plan-v3.3-shadow-genome.md  plan-v3.4-lifecycle.md  plan-v3.5-ggcore-integration.md  plan-v4.0-tauri-shell.md  plan-v5.0-uor-identity.md  plan-v5.1-bidirectional-thermodynamics.md  plan-v5.2-associative-promotion.md  plan-v5.3-simple-api.md  plan-v5.4-slo-circuit-breaker.md  plan-v5.5-cognitive-profile.md  plan-v5.6-file-ingestion.md  plan-v5.7-zero-trust-crystallization.md  plan-v5.8-delete-and-traverse.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  commands_v2.rs  main.rs  state.rs
stats/: monitor.js
(+218 files in other folders)
