[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
gg-core = { path = "G:/mythologiq/GG/GG-CORE/core-runtime" }
