[package]
name = "evolve-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "EvolveAI - Autopoietic Memory System (Tauri v2 Desktop App)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
evolve-core = { path = "../crates/evolve-core" }
