[package]
name = "evolve-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Autopoietic memory system - core library"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
