[package]
name = "evolve-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Autopoietic memory system - core library"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true

# Optional: GG-CORE for real ONNX embeddings
gg-core = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = []
ggcore = ["gg-core", "async-trait"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
